--- a/Report/unswthesis-2.0/sample-thesis.tex
+++ b/Report/unswthesis-2.0/sample-thesis.tex
@@ -30,7 +30,8 @@
 \thesisdegree{Bachelor of Engineering in Computer Engineering}
 %\thesisdegree{Doctor of Philosophy}
 \thesisdate{26th May 2015}
-\thesissupervisor{Dr Hye-young Paik}% for undergrad theses only				
+\thesissupervisor{Dr Hye-young Paik}% for undergrad theses only	
+\thesisassessor{Prof Fethi Rabhi}% for undergrad theses only				
 
 
 %% My own LaTeX macros, definitions, etc
@@ -43,8 +44,8 @@
 \frontmatter  
 \maketitle
 
-%\include{abstract}
-%\include{acknowledgements}
+\include{abstract}
+\include{acknowledgements}
 %\include{abbreviations}
 
 \tableofcontents
@@ -75,9 +76,10 @@
 \include{introduction}
 \include{background}
 %\include{proposal}
-\include{plan}
-%\include{evaluation}
-%\include{conclusion}
+\include{design}
+\include{implementation}
+\include{evaluation}
+\include{conclusion}
 
 %% chapters in the ``backmatter'' section do not have chapter numbering
 %% text in the ``backmatter'' is single spaced
