--- a/Report/unswthesis-2.0/implementation.tex
+++ b/Report/unswthesis-2.0/implementation.tex
@@ -58,7 +58,12 @@ User modelling came from Bon~\cite{bonds2010myspace} and Nad~\cite{nadkarni2012p
   	\item A \textbf{Follower} is a user who uses Facebook to see posts from organisations.
 \end{itemize}
 
-These may not be the only types of users so we had conducted a survey and used a survey distributor called Survey Monkey to distribute the survey. We received over 100 responses and have analysed these responses for any notable patterns. In this analysis we have concluded that the three types we have are suitable.
+These may not be the only types of users so we had conducted a survey and used a survey distributor called Survey Monkey to distribute the survey. We received over 100 responses and have analysed these responses for any notable patterns. In this analysis we have concluded that the three types we have are suitable. There is a chart below showing the different types.
+
+\begin{center}
+  \includegraphics[scale=0.8]{images/usermodelChart.png}
+  \captionof{figure}{Welcome screen}
+\end{center}
 
 \section{User Interface}
 
